--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
-    "sort-by": "^0.0.2"
+    "sort-by": "^0.0.2",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
