--- a/package.json
+++ b/package.json
@@ -1,37 +1,55 @@
 {
-  "name": "sad-front",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "antd": "^5.12.8",
-    "axios": "^1.6.5",
-    "jsonwebtoken": "^9.0.2",
-    "localforage": "^1.10.0",
-    "match-sorter": "^6.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "sort-by": "^0.0.2",
-    "zustand": "^4.5.0"
-  },
-  "devDependencies": {
-    "@iconify/react": "^4.1.1",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "husky": "^9.0.11",
-    "prettier": "^3.2.5",
-    "vite": "^5.0.8"
-  }
+	"name": "sad-front",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+		"lint:fix": "eslint --fix --ext .js src",
+		"preview": "vite preview",
+		"prettier": "prettier --write \"src/**/*.js\"",
+		"prettier:check": "prettier --check \"src/**/*.js\"",
+		"prepare": "husky || true",
+		"configure-husky": "npx husky install && npx husky add .husky/pre-commit \"npx --no-install lint-staged\"",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"dependencies": {
+		"antd": "^5.12.8",
+		"axios": "^1.6.5",
+		"jsonwebtoken": "^9.0.2",
+		"localforage": "^1.10.0",
+		"match-sorter": "^6.3.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.20.1",
+		"sort-by": "^0.0.2",
+		"zustand": "^4.5.0"
+	},
+	"devDependencies": {
+		"@iconify/react": "^4.1.1",
+		"@types/react": "^18.2.43",
+		"@types/react-dom": "^18.2.17",
+		"@vitejs/plugin-react": "^4.2.1",
+		"eslint": "^8.55.0",
+		"eslint-plugin-react": "^7.33.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.5",
+		"husky": "^9.0.11",
+		"lint-staged": "^15.2.2",
+		"prettier": "^3.2.5",
+		"shx": "^0.3.4",
+		"vite": "^5.0.8"
+	},
+	"lint-staged": {
+		".{js,ts}": [
+			"prettier --write",
+			"git add"
+		],
+		"*.{html,css,less,md,json}": [
+			"prettier --write",
+			"git add"
+		]
+	}
 }
