--- a/package.json
+++ b/package.json
@@ -44,12 +44,10 @@
 	},
 	"lint-staged": {
 		".{js,ts}": [
-			"prettier --write",
-			"git add"
+			"prettier --write"
 		],
 		"*.{html,css,less,md,json}": [
-			"prettier --write",
-			"git add"
+			"prettier --write"
 		]
 	}
 }
