--- a/package.json
+++ b/package.json
@@ -42,6 +42,11 @@
 		"shx": "^0.3.4",
 		"vite": "^5.0.8"
 	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	},
 	"lint-staged": {
 		".{js,ts}": [
 			"prettier --write"
